# StelloEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adr.md  bug_report.md
.github/workflows/: ci.yml  docs.yml  sanitizers.yml
Editor/: MainWindow.xaml  MainWindow.xaml.cs  app.manifest
Editor/GameProject/: ProjectBrowserDialog.xaml  ProjectBrowserDialog.xaml.cs  ProjectBrowserDialogue.xaml  ProjectBrowserDialogue.xaml.cs
docs/: Doxyfile
search/: all_0.js  all_3.js  all_5.js  all_6.js  pages_0.js  pages_1.js  searchdata.js
