cmake_minimum_required(VERSION 3.28)
project(StellarEngine VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# I moduli verranno aggiunti qui con add_subdirectory() milestone per milestone
# add_subdirectory(foundation)
# add_subdirectory(runtime)
# add_subdirectory(editor)